[tool.poetry]
name = "python_prototype"
version = "0.1.0"
description = "A prototype for the project Arachomb"
authors = ["Erling Indstoy Langlo <erlinl18@uia.no>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
beautifulsoup4 = "^4.9.3"
httpx = "^0.17.0"
trio = "^0.18.0"
google = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
